[package]
name = "magnesia"
version = "0.1.0"
authors = ["Andrew Mcveigh <me@andrewmcveigh.com>"]
description = "A clojure/scheme/haskell-like language written in Rust"
repository = "https://github.com/andrewmcveigh/magnesia"
readme = "README.md"

[dependencies]

[[bin]]
doc = false
path = "src/main.rs"
name = "magnesia"